[package]
name = "crafting-lambda-functions-in-rust"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
cuid2 = "0.1.2"
lambda_http = "0.13.0"
serde = "1.0.208"
serde_json = "1.0.125"

tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "serverless_link_shortener"
path = "src/main.rs"
test = false
